--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ tipos-variaveis/.vscode/settings.json
 sintaxe/.vscode/settings.json
 sistema-smart-tv/.vscode/settings.json
 java-terminal/.vscode/settings.json
+java-terminal/.vscode/launch.json
